feat: `users`, `stores` 関連のエンドポイントを作成
